# pyfoobar

./: .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  justfile  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  tests.yml
foobar/: __about__.py  __init__.py  main.py
pyfoobar/: __about__.py  __init__.py  cli.py  main.py
src/pyfoobar/: __about__.py  __init__.py  cli.py  main.py
test/: test_cli.py  test_foobar.py  test_solve.py
tests/: test_solve.py
