[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[project]
name = "pyfoobar"
authors = [{name = "Nico Schlömer", email = "nico.schloemer@gmail.com"}]
description = "Best practices for Python projects"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dynamic = ["version"]
requires-python = ">=3.7"

[project.urls]
Code = "https://github.com/nschloe/pyfoobar"
Issues = "https://github.com/nschloe/pyfoobar/issues"

[tool.setuptools.dynamic]
version = {attr = "pyfoobar.__about__.__version__"}

[project.scripts]
pyfoobar = "pyfoobar.cli:show"
